#41, fixes button text wrapping in smaller devices

--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,7 @@ i
 
     color: #3498db;
 }
+
+.btn_wrap {
+    white-space: normal;
+}
